--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <title>My Portfolio</title>
   </head>
-  <body>
+  <body class="bg-black">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
